# graphql-tag-swc-plugin

./: .gitignore  .npmignore  .npmrc  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: rust.yml
src/: imperative_lib.rs  lib.rs
tests/: fixtures.rs
tests/__swc_snapshots__/src/lib.rs/: default_export.js  export_from_arrow_expression.js  export_from_function_expression.js
tests/fixtures/definations/fragment/: input.js  output.js
tests/fixtures/definations/operation/mutation/: input.js  output.js
tests/fixtures/definations/operation/query/: input.js  output.js
tests/fixtures/directives/: input.js  output.js
tests/fixtures/dynamicSegments/: input.js  output.js
tests/fixtures/importSources/: output.js
tests/fixtures/returnFromArrowFunction/: input.js
tests/fixtures/returnFromFunctionExpression/: input.js
tests/fixtures/selections/: input.js  output.js
tests/fixtures/type/: input.js  output.js
tests/fixtures/usage/defaultExport/: input.js  output.js
tests/fixtures/usage/returnFromArrowFunction/: input.js  output.js
tests/fixtures/usage/returnFromFunctionExpression/: output.js
tests/fixtures/values/: input.js  output.js
tests/graphql_tag/definations/fragment/: output.js
tests/graphql_tag/definations/operation/mutation/: strip-output.js
tests/graphql_tag/definations/operation/query/: input.js  output.js
tests/graphql_tag/definations/operation/unnamed_operation/: input.js  strip-output.js
tests/graphql_tag/definations/operation/unnamed_query/: input.js  output.js  strip-output.js
tests/graphql_tag/directives/: input.js  output.js
tests/graphql_tag/dynamicSegments/: input.js  output.js  strip-output.js
tests/graphql_tag/importSources/: input.js
tests/graphql_tag/selections/: input.js  output.js
tests/graphql_tag/type/: input.js  output.js  strip-output.js
tests/graphql_tag/usage/defaultExport/: strip-output.js
tests/graphql_tag/usage/returnFromArrowFunction/: strip-output.js
tests/graphql_tag/usage/returnFromFunctionExpression/: input.js
tests/graphql_tag/values/: output.js  strip-output.js
tests/unique_identifier/no_unique/: input.js  output.txt
tests/unique_identifier/with_unique_import/: input.js
tests/unique_identifier/with_unique_local/: input.js  output.txt
transform/: Cargo.toml
transform/src/: lib.rs
transform/src/parser/: mod.rs  utils.rs
transform/src/parser/nodes/directive/: mod.rs
transform/src/parser/nodes/document/: mod.rs
transform/src/parser/nodes/selection_set/: mod.rs  selection.rs
transform/src/parser/nodes/types/: mod.rs
transform/src/structs/: mod.rs
transforms/graphql_tag/: Cargo.toml
transforms/graphql_tag/src/: lib.rs
transforms/graphql_tag/src/parser/: mod.rs  utils.rs
transforms/graphql_tag/src/parser/nodes/: mod.rs
transforms/graphql_tag/src/parser/nodes/arguments/: mod.rs
transforms/graphql_tag/src/parser/nodes/definitions/: fragment.rs  mod.rs  operation.rs
transforms/graphql_tag/src/parser/nodes/directive/: mod.rs
transforms/graphql_tag/src/parser/nodes/document/: mod.rs
transforms/graphql_tag/src/parser/nodes/name/: mod.rs
transforms/graphql_tag/src/parser/nodes/selection_set/: mod.rs  selection.rs
transforms/graphql_tag/src/parser/nodes/types/: mod.rs
transforms/graphql_tag/src/parser/nodes/value/: mod.rs
transforms/graphql_tag/src/parser/nodes/variables/: mod.rs
transforms/graphql_tag/src/structs/: mod.rs
transforms/graphql_tag/src/utils/: mod.rs
transforms/unique_identifier/: Cargo.toml
transforms/unique_identifier/src/: lib.rs
