[package]
authors = ["Rishabh Chawla <rishabh31121999@gmail.com>"]
name = "graphql-tag-swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "0.86.*", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.110.9"
swc_ecma_visit = "0.96.9"
graphql_tag = { path = "./transforms/graphql_tag" }
unique_identifier = { path = "./transforms/unique_identifier" }
serde = "1.0.193"
serde_json = "1.0.108"

[dev-dependencies]
swc_ecma_parser = "0.141.30"
testing = "0.35.12"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
