[package]
authors = ["Rishabh Chawla <rishabh31121999@gmail.com>"]
name = "graphql-tag-swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "16.0.0", features = [
  "ecma_plugin_transform",
  "__parser",
] }
graphql_tag = { path = "./transforms/graphql_tag" }
unique_identifier = { path = "./transforms/unique_identifier" }
serde = "1.0.193"
serde_json = "1.0.108"

[dev-dependencies]
testing = "0.35.24"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
