[package]
authors = ["Rishabh Chawla <rishabh31121999@gmail.com>"]
name = "graphql_tag"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-parser = "0.7.5"
swc_core = { version = "16.0.0", features = [
  "ecma_plugin_transform",
  "__parser",
] }
regex = "1"
serde = "1.0.193"
serde_json = "1.0.108"
miette = { version = "3.2.0", features = ["fancy"] }
thiserror = "1.0.30"
